src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/diagonal_bridge.bgs
FIELD
11 x 8 | 2

ISLANDS
( 0, 0 | 1 )
( 5, 5 | 1 )

BRIDGES
( 0, 1 | false )
